Fix scrollbar in modal

--- a/client/style/modal.css
+++ b/client/style/modal.css
@@ -14,7 +14,7 @@
   left: 0;
   right: 0;
   bottom: 40px;
-  overflow: auto;
+  overflow: hidden;
   outline: none;
   border: none;
   animation-name: slideUp;
@@ -42,7 +42,7 @@
   left: 0;
   right: 0;
   bottom: 40px;
-  overflow: auto;
+  overflow: hidden;
   outline: none;
   border: none;
   animation-name: slideDown;
